--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: sans-serif;
+  color: #ffffff;
 }
 
 /* layout */
@@ -12,19 +13,18 @@ body {
 
 .main {
   display: flex;
+  background: #231f1f;
   height: 100%;
 }
 
-
 /*left section */
-.left { 
+.left {
   width: 25%;
   border-right: 2px solid black;
   height: 100%;
-
 }
 
-.info {  
+.info {
   height: 35%;
   display: flex;
   flex-direction: column;
@@ -66,11 +66,7 @@ body {
 /* stared game overview */
 .stared-game {
   height: 35%;
-  background: linear-gradient(
-    120deg,
-    rgb(221, 221, 221),
-    rgb(117, 106, 106)
-  );
+  background: #797979;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -81,7 +77,7 @@ body {
 .score {
   position: absolute;
   top: 1em;
-  left: .5em;
+  left: 0.5em;
 }
 
 .tags {
@@ -103,11 +99,12 @@ body {
   height: 15vh;
 }
 
-.search-bar input[type=text] {
+.search-bar input[type="text"] {
   width: 80%;
   border: none;
   box-shadow: 1px 1px 5px black;
-  padding: .2em;
+  padding: 0.2em;
+  color: #231f1f;
 }
 
 .search-bar button {
@@ -121,18 +118,18 @@ body {
   justify-content: space-between;
 }
 
-.list{
+.list {
   border-top: 2px solid black;
 }
 
 .list-item {
   display: flex;
   justify-content: space-around;
-  background: rgb(173, 173, 173);
+  background: #57de95;
   padding: 1em;
 }
 
-/* left section */
+/* right section */
 
 .right {
   height: 100%;
@@ -150,11 +147,10 @@ body {
 .chat-room {
   display: flex;
   justify-content: space-around;
-  background: rgb(173, 173, 173);
   padding: 1em;
 }
 
-@media screen and (min-width: 1080px){
+@media screen and (min-width: 1080px) {
   body {
     height: 100vh;
     display: flex;
@@ -174,10 +170,9 @@ body {
     border-radius: 50%;
     overflow: hidden;
   }
-  
+
   .avatar img {
     width: 100%;
     height: 100%;
   }
-  
 }
