--- a/main.css
+++ b/main.css
@@ -66,7 +66,7 @@ body {
 /* stared game overview */
 .stared-game {
   height: 35%;
-  background: #797979;
+  background: #00a3ff;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -119,7 +119,9 @@ body {
 }
 
 .list {
+  height: 85vh;
   border-top: 2px solid black;
+  overflow-y: scroll;
 }
 
 .list-item {
