--- a/main.css
+++ b/main.css
@@ -121,7 +121,7 @@ body {
 .list {
   height: 85vh;
   border-top: 2px solid black;
-  overflow-y: scroll;
+  /*overflow-y: scroll;*/
 }
 
 .list-item {
@@ -150,6 +150,35 @@ body {
   display: flex;
   justify-content: space-around;
   padding: 1em;
+}
+
+.form-container {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 70%;
+  height: 50vh;
+  margin: auto;
+  padding: 1em;
+  border: 3px solid #838383;
+  background: #231f1f;
+}
+
+.form input,
+.form button {
+  color: black;
+  padding: 0.2em;
+}
+
+.form button {
+  background: #00a3ff;
+  border: 1px solid #ffffff;
 }
 
 @media screen and (min-width: 1080px) {
